--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "webcam-easy",
-  "version": "1.0.5",
+  "name": "@eduardosmarcal/webcam-easy",
+  "version": "1.1.0",
   "description": "HTML5 webcam streaming javascript library, with front and back camera switch, also have take photo function.",
   "main": "src/webcam-easy.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bensonruan/webcam-easy"
+    "url": "https://github.com/eduardosmarcal/webcam-easy"
   },
   "homepage": "https://bensonruan.com/how-to-access-webcam-and-take-photo-with-javascript",
   "keywords": [
@@ -16,6 +16,9 @@
     "frontcamera",
     "backcamera"
   ],
-  "author": "Benson Ruan",
+  "author": "Eduardo S. Marçal",
+  "contributors": [
+    "Benson Ruan"
+  ],
   "license": "MIT"
 }
