--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@eduardosmarcal/webcam-easy",
-  "version": "1.1.0",
-  "description": "HTML5 webcam streaming javascript library, with front and back camera switch, also have take photo function.",
-  "main": "src/webcam-easy.js",
+  "version": "2.0.0",
+  "description": "HTML5 webcam streaming TypeScript/JavaScript library, with front and back camera switch, also have take photo function.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/eduardosmarcal/webcam-easy"
@@ -11,10 +12,10 @@
   "keywords": [
     "webcam",
     "camera",
-    "getusermedia",
+    "getUserMedia",
     "streaming",
-    "frontcamera",
-    "backcamera"
+    "frontCamera",
+    "backCamera"
   ],
   "author": "Eduardo S. Marçal",
   "contributors": [
